fix checkbox and radio button styles on Firefox

--- a/style.css
+++ b/style.css
@@ -288,8 +288,9 @@ input[type="radio"]
 	display: inline-block;
 	margin: 0 0.5em 0 0;
 	border-radius: 0.125em;
-	appearance: none;
+	-moz-appearance: none;
 	-webkit-appearance: none;
+	appearance: none;
 	font: inherit;
 	cursor: unset;
 	outline: none;
